# agent-coding

./: .env.example  .gitignore  BUILD_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  SECURITY_FIXES.md  agent.md.md  notes.txt  pyproject.toml  setup.sh
.agent/: state.json
agent/: __init__.py  analyze.py  cli.py  config.py  contradiction.py  llm.py  prompts.py  state.py
agent/tools/: __init__.py  fs.py  patch.py  shell.py
