[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "A local coding agent CLI tool that uses LLM for code assistance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LCA Developer", email = "dev@example.com"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.scripts]
lca = "agent.cli:app"

[tool.setuptools]
packages = ["agent", "agent.tools"]