[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "A local coding agent with CLI interface for project management"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Local Coding Agent", email = "agent@local.dev"}
]
keywords = ["cli", "agent", "coding", "local", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
lca = "agent.cli:app"

[project.urls]
Homepage = "https://github.com/local-coding-agent"
Repository = "https://github.com/local-coding-agent/lca"
Issues = "https://github.com/local-coding-agent/lca/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]