[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "A local coding agent that works with LLM APIs"
authors = [{name = "Local Coding Agent", email = "agent@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
urls = {
  "Homepage"   = "https://github.com/mehran-shabani/agent-coding",
  "Repository" = "https://github.com/mehran-shabani/agent-coding"
}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "rich>=13.0.0,<15.0.0",
    "openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.7.0; python_version<'3.9'",
]

[project.scripts]
lca = "agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent"]